Emit events after ticket actions like create, close, reply delete

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 	],
 	"autoload": {
 	    "psr-4": {
-	        "Sdkcodes\\LaraTicket\\": "src/"
+	        "Sdkcodes\\lara-ticket\\": "src/"
 	    }
 	},
 	"extra" : {
